# wasmtime-playground

./: Cargo.toml
example-plugin/: Cargo.toml
example-plugin/src/: lib.rs
examples/add/: add.wat  main.rs
examples/memory/: main.rs  memory.wat  pointer.rs
runtime/: Cargo.toml
runtime/src/: api.rs  lib.rs
src/: ReadMe.md
