[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true  }

[features]
default = ["runtime"]
runtime = [
    "api",
    "dep:anyhow",
    "dep:wasmtime",
    "dep:wasmtime-wasi"
]
api = []
